# LODCP

./: .gitignore  CMakeLists.txt  README.md  config.yml  dataset.yaml  platformio.ini  requirements.txt
.github/workflows/: build.yml
data_process/: data_std.py  prepare_bdd100k.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: prepare.md
docs/thesis/: odacp.docx
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt  main.cpp  weblive.cpp
logs/20250409-033313/train/: events.out.tfevents.1744140793.ChenpeeldeMacBook-Air.local.98808.0.v2
logs/20250409-033533/train/: events.out.tfevents.1744140933.ChenpeeldeMacBook-Air.local.99029.0.v2
logs/20250409-033716/train/: events.out.tfevents.1744141036.ChenpeeldeMacBook-Air.local.99224.0.v2
logs/20250409-041550/train/: events.out.tfevents.1744143350.ChenpeeldeMacBook-Air.local.3241.0.v2
models/: fast_scnn.py  hyp.yml  train_fast_scnn.py  train_yolo.md  train_yolo.py
models/fastscnn/: training_log.csv
models/saved_models/: fast-scnn.pth
models/yolov5su/: args.yaml  results.csv
models/yolov5su/weights/best_saved_model/: fingerprint.pb  metadata.yaml
scripts/: getdataset.py  lane_obstacle_detection.py  npz_dataset.py  prepare.py  test.py  tfrecord.py  tiny_unet.py  tracking.py  train.ipynb  train.py
scripts/train/: prepare.py
tracking/: collision_prediction.py
train/: getdataset.py  hyp.yml  prepare_kitti.py  train_fast_scnn.py
